--- a/packages/MovieDataStore/package.json
+++ b/packages/MovieDataStore/package.json
@@ -5,11 +5,17 @@
   "types": "dist/index.d.ts",
   "license": "MIT",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.6",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.4.4"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "workspaces": {
     "nohoist": [
