--- a/packages/MovieDataStore/package.json
+++ b/packages/MovieDataStore/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5.4.4"
   },
   "scripts": {
+    "prepare": "npm run build",
     "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watchAll"
