--- a/packages/MovieAppMobile/package.json
+++ b/packages/MovieAppMobile/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "@assessment/datastore": "1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
