--- a/packages/MovieAppMobile/package.json
+++ b/packages/MovieAppMobile/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.73.6",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-navigation": "^5.0.0",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
@@ -42,7 +43,7 @@
   },
   "workspaces": {
     "nohoist": [
-      "**"
+      "**/**"
     ]
   }
 }
