--- a/packages/MovieAppWeb/package.json
+++ b/packages/MovieAppWeb/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@assessment/datastore": "1.1.0",
     "@reduxjs/toolkit": "^2.2.3",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
