--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "postinstall": "lerna run prepare",
     "mobile:ios": "yarn workspace @assessment/mobile ios",
+    "mobile:android": "yarn workspace @assessment/mobile android",
     "web:dev": "yarn workspace @assessment/web dev",
     "web:build": "yarn workspace @assessment/web build",
     "web:preview": "yarn workspace @assessment/web preview"
