--- a/packages/MovieDataStore/package.json
+++ b/packages/MovieDataStore/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@assessment/datastore",
   "version": "1.1.0",
+  "private": true,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
